TAG: qcreports_db-6-0-20-2
DATE: 06/30/2022
STAFF: lec
wts2-918/Tweek for reporting invalid properties

TAG: qcreports_db-6-0-20-1
DATE: 06/27/2022
STAFF: lec
wts2-791/cell type annotations to obsolete CL terms/GXD_CellLine_Obsolete.sql

TAG: qcreports_db-6-0-18-14
DATE: 05/12/2022
STAFF: sc 
mgd/GXD_ChildExpNotParent.py - bug fix
WTS2-868 - something is scrambled on the GXD_ChildExpNotParent.rpt

TAG: qcreports_db-6-0-18-13
TAG: qcreports_db-6-0-18-12
DATE: 04/07/2022
STAFF: lec
fixed link to /data/loads/go/goamouse/output/pubmed.error

TAG: qcreports_db-6-0-18-11
TAG: qcreports_db-6-0-18-10
DATE: 04/06/2022
STAFF: lec
wts2-802/HT index custom & QC reports don't work with GEO primary ids
added logicaldb = 190
#       modified:   GXD_HTExpCuration.py
#       modified:   GXD_HTSampleGenotypeNA.py
#       modified:   GXD_HTSampleNoAge.sql
#       modified:   GXD_HTSampleNoStructure.py
#       modified:   GXD_HTSampleTheilerAge.py
wts2-792/QC for GXD & Cre: specimens/gel lanes lacking an age min/max
#       modified:   mgd/GXD_SpecNoAge.sql
#       modified:   mgd/RECOMB_SpecNoAge.sql

TAG: qcreports_db-6-0-18-9
TAG: qcreports_db-6-0-18-8
DATE: 03/23/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline
#	modified:   qcnightly_reports.csh
remove: mgidbmigration/tr13272/go_cam.csh
remove: weekly/PHENO_Features.py per Allele Relationship PWI
wts2-804/modify BIB_Duplicates.sql.rpt to "ignore" period at end of title

TAG: qcreports_db-6-0-18-7
TAG: qcreports_db-6-0-18-6
DATE: 02/21/2022
STAFF: lec
CHANGES:
wts2-767/mgi_notechunk/mgi_note merge

TAG: not tag
DATE: 01/31/2022
STAFF: lec
monthly/ALL_RefCounts.py; added jason.beckwith@jax.org

TAG: qcreports_db-6-0-18-5
DATE: 02/09/2020
STAFF: lec
wts2-773/Adding curator column to New Allele Report
#       modified:   weekly/ALL_NewAllele.py

TAG: qcreports_db-6-0-18-4
TAG: qcreports_db-6-0-18-3
TAG: qcreports_db-6-0-18-2
TAG: qcreports_db-6-0-18-1
DATE: 01/10/2022
STAFF: sc
Merge YAKS branch to trunk