@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-21-1
+DATE: 07/18/2022
+STAFF: lec
+wts2-938/Non-Recombinase allele with driver gene check
+RECOMB_NoDriver.py
+
 TAG: qcreports_db-6-0-20-2
 DATE: 06/30/2022
 STAFF: lec
